--- a/package.json
+++ b/package.json
@@ -6,6 +6,46 @@
     "doc": "docs",
     "test": "tests"
   },
+  "type": "module",
+  "types": "dist/esm/index.d.ts",
+  "main": "dist/esm/index.js",
+  "module": "dist/esm/index.js",
+  "browser": "dist/umd/index.js",
+  "unpkg": "dist/umd/index.js",
+  "files": [
+    "dist/**"
+  ],
+  "exports": {
+    "./dist/esm/*": {
+      "types": "./dist/esm/index.d.ts",
+      "import": "./dist/esm/*.js",
+      "require": "./dist/esm/*.js"
+    },
+    "./dist/umd/*": {
+      "types": "./dist/esm/index.d.ts",
+      "import": "./dist/umd/index.js",
+      "require": "./dist/umd/index.js"
+    },
+    "./dist/node/*": {
+      "types": "./dist/node/index.d.ts",
+      "import": "./dist/node/*.js",
+      "require": "./dist/node/*.js"
+    },
+    "./css/*": {
+      "import": "./css/*",
+      "require": "./css/*"
+    },
+    "./*": {
+      "types": "./dist/esm/index.d.ts",
+      "import": "./dist/esm/*.js",
+      "require": "./dist/umd/*.js"
+    },
+    ".": {
+      "types": "./dist/esm/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/umd/index.js"
+    }
+  },
   "scripts": {
     "benchmark": "node ./run-benchmark.js",
     "build:esm": "tsc -p tsconfig.esm.json",
@@ -69,7 +109,6 @@
     "@types/multer": "~1.3.3",
     "@types/node": "~10.12.10",
     "@types/ramda": "0.25.5",
-    "@types/selenium-webdriver": "^3.0.8",
     "@types/sinon": "~4.1.2",
     "benchmark": "^1.0.0",
     "bootstrap": "^3.3.7",
@@ -86,7 +125,6 @@
     "npm-run-all": "~4.1.3",
     "ramda": "0.25.0",
     "rimraf": "~2.6.2",
-    "selenium-webdriver": "3.6.0",
     "sinon": "~4.1.3",
     "typescript": "3.5.3"
   },
